--- a/server/package.json
+++ b/server/package.json
@@ -11,9 +11,12 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "bcrypt": "^4.0.1",
+    "@apollo/server": "^4.9.3",
+    "apollo-server-express": "^3.12.1",
+    "bcrypt": "^5.0.0",
     "express": "^4.17.1",
-    "jsonwebtoken": "^8.5.1",
+    "graphql": "^15.5.0",
+    "jsonwebtoken": "^9.0.0",
     "mongoose": "^7.0.2"
   },
   "devDependencies": {
